update detail patient page

--- a/src/resources/views/user/patient/detail.ejs
+++ b/src/resources/views/user/patient/detail.ejs
@@ -43,7 +43,7 @@
                 <div class="tab-content">
                     <div class="avatar">
                         <div class="avatar__content">
-                            <img src="/img/user.png" alt="" class="avatar__content-img">
+                            <img src="<%= patient.image %>" alt="" class="avatar__content-img">
                         </div>
                         <button type="button" class="avatar__btn">
                             <i class='bx bxs-camera-plus'></i>
