--- a/src/resources/views/admin/patient/index.ejs
+++ b/src/resources/views/admin/patient/index.ejs
@@ -10,7 +10,7 @@
             </a>
         </div>
     </div>
-    <form method="POST" action="/administration/patient/delete" class="deleteFormChoose">
+    <form method="POST" action="/administration/patient/deleteMany?_method=DELETE" class="deleteFormChoose">
         <div class="admin__main-table">
             <table>
                 <thead>
@@ -133,7 +133,7 @@
         modal.style.display = 'none';
     }
     btnYes.onclick = function(){
-        deleteForm.setAttribute('action', '/administration/patient/destroy/' + ID + '?_method=DELETE')
+        deleteForm.setAttribute('action', '/administration/patient/delete/' + ID + '?_method=DELETE')
         deleteForm.submit();
     }
     btnYesChoose.onclick = function(){
