--- a/src/resources/views/user/appointment/index.ejs
+++ b/src/resources/views/user/appointment/index.ejs
@@ -80,15 +80,15 @@
         <div class="detail_appointment-heading">
             <div>
                 <div>
-                    <input type="radio" name="status" id="status-not" class="detail_appointment-input" value="Chưa đến">
+                    <input type="radio" name="status" id="status-not" class="detail_appointment-input" value="Chưa đến" disabled>
                     <label for="status-not" class="detail_appointment-label">Chưa đến</label>
                 </div>
                 <div>
-                    <input type="radio" name="status" id="status-came" class="detail_appointment-input" value="Đã đến">
+                    <input type="radio" name="status" id="status-came" class="detail_appointment-input" value="Đã đến" disabled>
                     <label for="status-came" class="detail_appointment-label">Đã đến</label>
                 </div>
                 <div>
-                    <input type="radio" name="status" id="status-cancel" class="detail_appointment-input" value="Hủy">
+                    <input type="radio" name="status" id="status-cancel" class="detail_appointment-input" value="Hủy" disabled>
                     <label for="status-cancel" class="detail_appointment-label">Đã hủy</label>
                 </div>
             </div>
