update view admin

--- a/src/resources/views/admin/partials/header.ejs
+++ b/src/resources/views/admin/partials/header.ejs
@@ -35,9 +35,9 @@
                     </a>
                 </li>
                 <li class="admin__header-item">
-                    <a href="" class="admin__header-link">
-                        <i class='bx bx-cog'></i>
-                        Setting
+                    <a href="/" class="admin__header-link">
+                        <i class='bx bx-book-content' ></i>
+                        Manager
                     </a>
                 </li>
                 <li class="admin__header-item">
