update view admin

--- a/src/resources/views/admin/partials/header.ejs
+++ b/src/resources/views/admin/partials/header.ejs
@@ -37,7 +37,7 @@
                 <li class="admin__header-item">
                     <a href="/" class="admin__header-link">
                         <i class='bx bx-book-content' ></i>
-                        Manager
+                        Clinic
                     </a>
                 </li>
                 <li class="admin__header-item">
